--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light
   i.fa.fa-lock
-  a.navbar-brand(href="#") Password Generator
+  a.navbar-brand(href="/") Password Generator
   button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
     span.navbar-toggler-icon
   div.collapse.navbar-collapse#navbarNav
@@ -10,5 +10,5 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
       li.nav-item
         a.nav-link(href="/about") About
       li.nav-item
-        a.nav-link(href="#") My Passwords
+        a.nav-link(href="/passwords") My Passwords
     button.btn.btn-primary Log In
