added routes for sign up and login pages

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -6,9 +6,10 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
   div.collapse.navbar-collapse#navbarNav
     ul.navbar-nav
       li.nav-item.active
-        a.nav-link(href="#") Sign Up
+        a.nav-link(href="/signup") Sign Up
       li.nav-item
         a.nav-link(href="/about") About
       li.nav-item
         a.nav-link(href="/passwords") My Passwords
-    button.btn.btn-primary Log In
+    a(href="/login")
+      button.btn.btn-primary Log In
