--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,12 +6,36 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
+  min-height: 100vh;
+  position: relative;
   font-family: 'Roboto', sans-serif;
+}
+
+.btn-primary {
+  background-color: #32d268;
+  border: none;
+}
+
+.btn-primary:hover {
+  background-color: #7af0a0;
+  background-color: rgba(122, 240, 160, 1);
+
 }
 
 /*********************************
 NAVIGATION
 *********************************/
+
+.navbar {
+  background: -webkit-gradient(linear, left top, right top, from(#7af0a0), to(#000000));
+  background: -moz-linear-gradient(left, #7af0a0 0%, #000000 100%);
+  background: -o-linear-gradient(left, #7af0a0 0%, #000000 100%);
+  background: linear-gradient(to right, #7af0a0 0%, #000000 100%);
+  background: -webkit-gradient(linear, left top, right top, from(rgba(122, 240, 160, 1)), to(rgba(0, 0, 0, 1)));
+  background: -moz-linear-gradient(left, rgba(122, 240, 160, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  background: -o-linear-gradient(left, rgba(122, 240, 160, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  background: linear-gradient(to right, rgba(122, 240, 160, 1) 0%, rgba(0, 0, 0, 1) 100%);
+}
 
 .navbar-brand {
   font-family: 'Righteous', cursive;
@@ -37,11 +61,40 @@ JUMBOTRON
 }
 
 /*********************************
+SIGN UP PAGE
+*********************************/
+
+.form-control {
+  width: 400px;
+}
+
+/*********************************
 FOOTER
 *********************************/
 
 footer {
   width: 100%;
-  background-color: lightgrey;
+  background: -webkit-gradient(linear, left top, right top, from(#7af0a0), to(#000000));
+  background: -moz-linear-gradient(left, #7af0a0 0%, #000000 100%);
+  background: -o-linear-gradient(left, #7af0a0 0%, #000000 100%);
+  background: linear-gradient(to right, #7af0a0 0%, #000000 100%);
+  background: -webkit-gradient(linear, left top, right top, from(rgba(122, 240, 160, 1)), to(rgba(0, 0, 0, 1)));
+  background: -moz-linear-gradient(left, rgba(122, 240, 160, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  background: -o-linear-gradient(left, rgba(122, 240, 160, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  background: linear-gradient(to right, rgba(122, 240, 160, 1) 0%, rgba(0, 0, 0, 1) 100%);
   padding: 20px 0;
+  color: white;
+
+  position: absolute;
+  bottom: 0;
+}
+
+footer a {
+  color: white;
+}
+
+footer a:hover {
+  color: darkgrey;
+  opacity: 0.8;
+  text-decoration: none;
 }
