--- a/src/style.css
+++ b/src/style.css
@@ -6,12 +6,28 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
+  min-height: 100vh;
+  position: relative;
   font-family: 'Roboto', sans-serif;
+}
+
+.btn-primary {
+  background-color: #32d268;
+  border: none;
+}
+
+.btn-primary:hover {
+  background-color: rgba(122,240,160,1);
+
 }
 
 /*********************************
 NAVIGATION
 *********************************/
+
+.navbar {
+  background: linear-gradient(to right, rgba(122,240,160,1) 0%, rgba(0,0,0,1) 100%);
+}
 
 .navbar-brand {
   font-family: 'Righteous', cursive;
@@ -35,11 +51,33 @@ JUMBOTRON
 }
 
 /*********************************
+SIGN UP PAGE
+*********************************/
+
+.form-control {
+  width: 400px;
+}
+
+/*********************************
 FOOTER
 *********************************/
 
 footer {
   width: 100%;
-  background-color: lightgrey;
+  background: linear-gradient(to right, rgba(122,240,160,1) 0%, rgba(0,0,0,1) 100%);
   padding: 20px 0;
+  color: white;
+
+  position: absolute;
+  bottom: 0;
+}
+
+footer a {
+  color: white;
+}
+
+footer a:hover {
+  color: darkgrey;
+  opacity: 0.8;
+  text-decoration: none;
 }
