--- a/views/signup.pug
+++ b/views/signup.pug
@@ -19,4 +19,4 @@ block content
         div.form-group
           label(for="passwordConfirm") Confirm Password:
           input#passwordConfirm.form-control(type='password', placeholder='password' name='passwordConfirm')
-        button.btn.btn-primary Submit
+        button.btn.btn-primary(type='submit') Submit
