--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.btn {
+  border-radius: 0;
+}
+
 .btn-primary {
   background-color: #32d268;
   border: none;
