added session storage
added logout fucntionality

--- a/views/about.pug
+++ b/views/about.pug
@@ -3,7 +3,8 @@ extends layout
 block content
 
   div.container.text-center
-   h1 Easily Generate and Store Secure Passwords
-   p.lead Tired of trying to think up new passwords, and then remember them when you need to?
-   p Worry no more! Simply sign up for a free account and let Password Generator look after it all for you.
-   p
+    .row
+      .col-md-6.offset-3.my-5
+       h1 Easily Generate and Store Secure Passwords
+       p.lead Tired of trying to think up new passwords, and then remember them when you need to?
+       p Worry no more! Simply sign up for a free account and let Password Generator look after it all for you.
