--- a/views/passwords.pug
+++ b/views/passwords.pug
@@ -2,4 +2,7 @@ extends layout
 
 block content
 
-  h1 Saved Passwords
+  div.container
+    .row
+      .col-md-6-text-center.offset-3.my-5
+        h1 Saved Passwords for #{name}
