--- a/views/error.pug
+++ b/views/error.pug
@@ -2,8 +2,9 @@ extends layout
 
 block content
   .main.container
-    .row.text-xs-center
-      .col-md-6.col-md-offset-3.p-t-2
-        i.icn-person.material-icons error
+    .row.text-center.mt-5
+      .col.p-t-2
+        i.fa.fa-exclamation.mt-3
+        h4.mt-5 Error
         p.lead.m-t-2= message
         a(href="/") Return to Home Page
