--- a/src/style.css
+++ b/src/style.css
@@ -6,9 +6,12 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
-  min-height: 100vh;
   position: relative;
   font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  min-height: 100vh;
 }
 
 .btn {
@@ -42,12 +45,15 @@ NAVIGATION
   margin: 0 20px;
 }
 
+.fa-bars {
+  color: rgb(122,240,160);
+}
+
 /*********************************
 JUMBOTRON
 *********************************/
 
 .jumbotron {
-  height: 600px;
   color: white;
   background: url('../images/hero-image.jpg');
   background-size: cover;
@@ -60,6 +66,20 @@ SIGN UP PAGE
 
 .form-control {
   width: 400px;
+}
+
+/*********************************
+ERROR PAGE
+*********************************/
+
+.fa-exclamation {
+  font-size: 5rem;
+  color: white;
+  background-color: rgb(122,240,160);
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  padding-top: .8rem;
 }
 
 /*********************************
