--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -2,7 +2,8 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
   i.fa.fa-lock
   a.navbar-brand(href="/") Password Generator
   button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
-    span.navbar-toggler-icon
+    a
+      i.fa.fa-bars.nav-toggler
   div.collapse.navbar-collapse#navbarNav
     ul.navbar-nav
       if !currentUser
