--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -5,17 +5,19 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
     a
       i.fa.fa-bars.nav-toggler
   div.collapse.navbar-collapse#navbarNav
-    ul.navbar-nav
-      if !currentUser
-        li.nav-item.active
-          a.nav-link(href="/signup") Sign Up
-      li.nav-item
-        a.nav-link(href="/about") About
-      li.nav-item
-        a.nav-link(href="/passwords") My Passwords
-      if currentUser
-        a(href="/logout")
-          button.btn.btn-primary.pull-md-right Log Out
-      else
-        a(href="/login")
-          button.btn.btn-primary.pull-md-right Log In
+    .container
+      ul.navbar-nav
+        if !currentUser
+          li.nav-item.active
+            a.nav-link(href="/signup") Sign Up
+          li.nav-item
+            a.nav-link(href="/about") About
+        li.nav-item
+          a.nav-link(href="/passwords") My Passwords
+
+        if currentUser
+          a(href="/logout")
+            button.btn.btn-primary.pull-md-right Log Out
+        else
+          a(href="/login")
+            button.btn.btn-primary.pull-md-right Log In
