--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,24 @@
+:root {
+  --colorPrim: #008193;
+}
+
 /*********************************
 BASE STYLES
 *********************************/
+
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
   padding: 0;
   border: 0;
+  min-height: 100%;
   position: relative;
   font-family: 'Roboto', sans-serif;
-}
-
-.container {
-  min-height: 100vh;
+  padding-bottom: 6rem;
 }
 
 .btn {
@@ -19,13 +26,17 @@ body {
 }
 
 .btn-primary {
-  background-color: #32d268;
+  background-color: var(--colorPrim);
   border: none;
 }
 
 .btn-primary:hover {
-  background-color: rgba(122,240,160,1);
+  background-color: #00c2de;
 
+}
+
+#disclaimer {
+  font-style: italic;
 }
 
 /*********************************
@@ -33,7 +44,7 @@ NAVIGATION
 *********************************/
 
 .navbar {
-  background: linear-gradient(to right, rgba(122,240,160,1) 0%, rgba(0,0,0,1) 100%);
+  background: linear-gradient(to right, rgba(79,234,255,1) 0%, rgba(0,0,0,1) 100%);
 }
 
 .navbar-brand {
@@ -46,7 +57,12 @@ NAVIGATION
 }
 
 .fa-bars {
-  color: rgb(122,240,160);
+  color: rgb(79,234,255);
+}
+
+.navbar .btn {
+  position: absolute;
+  right: 50;
 }
 
 /*********************************
@@ -58,6 +74,24 @@ JUMBOTRON
   background: url('../images/hero-image.jpg');
   background-size: cover;
   border-radius: 0;
+}
+
+/*********************************
+ABOUT PAGE
+*********************************/
+
+.benefits li {
+  list-style: none;
+}
+
+.fa-check {
+  color: var(--colorPrim);
+  font-size: 1rem;
+}
+
+.benefits li p {
+  display: inline-block;
+  padding-left: 10px;
 }
 
 /*********************************
@@ -75,7 +109,7 @@ ERROR PAGE
 .fa-exclamation {
   font-size: 5rem;
   color: white;
-  background-color: rgb(122,240,160);
+  background-color: var(--colorPrim);
   height: 100px;
   width: 100px;
   border-radius: 50%;
@@ -88,7 +122,7 @@ FOOTER
 
 footer {
   width: 100%;
-  background: linear-gradient(to right, rgba(122,240,160,1) 0%, rgba(0,0,0,1) 100%);
+  background: linear-gradient(to right, rgba(79,234,255,1) 0%, rgba(0,0,0,1) 100%);
   padding: 20px 0;
   color: white;
 
