--- a/views/about.pug
+++ b/views/about.pug
@@ -4,7 +4,18 @@ block content
 
   div.container.text-center
     .row
-      .col-md-6.offset-3.my-5
-       h1 Easily Generate and Store Secure Passwords
-       p.lead Tired of trying to think up new passwords, and then remember them when you need to?
+      .col.mx-auto.my-5
+       h1.display-4 Easily Generate and Store Secure Passwords
+       p.lead Tired of trying to think up new passwords and then remembering them when you need to?
        p Worry no more! Simply sign up for a free account and let Password Generator look after it all for you.
+       h3.mt-5 Why Register?
+       p Registered users enjoy more options over their passwords than users who simply generate passwords on the home page.
+       h3.mt-5 Added Benefits:
+       ul.col-lg-6.offset-lg-3.benefits
+         li.text-left <i class="fa fa-check" aria-hidden="true"></i>
+          p Choose password length
+          li.text-left <i class="fa fa-check" aria-hidden="true"></i>
+           p Add "special characters" to your password
+           li.text-left <i class="fa fa-check" aria-hidden="true"></i>
+            p Save passwords to your wallet so you never forget them
+       a.btn.btn-primary.btn-lg(href="/signup", role="button") Create Account
