moved routes from app.js to ./routes/index.js
added boilerplate templating to passwords.pug

added functionality to show and hide "copy password" button when no password has been generated

--- a/views/index.pug
+++ b/views/index.pug
@@ -18,8 +18,8 @@ block content
     div.text-center.starter
       h3.col Get Started
       p#disclaimer Passwords generated here cannot be saved to your wallet. To save passwords click above to create an account.
-      button.btn.btn-primary.my-4#password-btn Click to generate password
+      button.btn.btn-primary.my-4.password-btn Click to generate password
       div.row.col-md-6.offset-md-3.text-center.password-generator
         h5.col-6.text-right#password-title Your password is:
-        p.col-6.text-left#password
-      button.btn.btn-secondary.my-4 Copy Password
+        p.col-6.text-left.password
+      button.btn.btn-secondary.my-4.copy-button Copy Password
