--- a/views/passwords.pug
+++ b/views/passwords.pug
@@ -3,6 +3,36 @@ extends layout
 block content
 
   div.container
+    .row.my-5.text-center.passwords-row
+      button.btn.btn-primary.my-4.password-btn Click to generate password
+      h5.my-auto.px-3.password-title Your password is:
+      p.my-auto.px-3.password
+      button.btn.btn-secondary.my-4.copy-button Copy Password
+
     .row
       .col-md-6-text-center.offset-3.my-5
         h1 Saved Passwords for #{name}
+
+    table.table
+      thead
+        tr
+          th Site Name
+          th URL
+          th Password
+      tbody
+        tr
+          td Some Website
+          td.savedPassword www.somewebsite.com
+          td password
+        tr
+          td Another Website
+          td.savedPassword www.anotherwebsite.com
+          td password
+        tr
+          td And Another Website
+          td.savedPassword www.andanotherwebsite.com
+          td password
+        tr
+          td One More Website
+          td.savedPassword www.onemorewebsite.com
+          td password
