added form to save passwords
adjusted jumbotron image

minor stylings

--- a/views/passwords.pug
+++ b/views/passwords.pug
@@ -3,11 +3,22 @@ extends layout
 block content
 
   div.container
-    .row.my-5.text-center.passwords-row
-      button.btn.btn-primary.my-4.password-btn Click to generate password
+    .row.my-5.mx-auto.passwords-row
+      button.btn.btn-primary.my-4.password-btn#myPasswordsButton Click to generate password
       h5.my-auto.px-3.password-title Your password is:
       p.my-auto.px-3.password
-      button.btn.btn-secondary.my-4.copy-button Copy Password
+
+    .row
+      .col-md-6.offset-md-3.save-form
+        h3.text-center Save Password To Wallet
+        form(method="POST", action="/save")
+          div.form-group
+            label(for="description") Site Name
+            input.form-control(type="text" id="description" placeholder="site name" name="description")
+          div.form-group
+            label(for="description") Website URL
+            input.form-control(type="text" id="description" placeholder="www.siteurl.com" name="url")
+          button.btn.btn-outline-primary.save-password(type='submit') Save To Wallet
 
     .row
       .col-md-6-text-center.offset-3.my-5
