--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,6 +34,16 @@ body {
 
 }
 
+.btn-outline-primary {
+  color: #008193;
+  border-color: #008193;
+}
+
+.btn-outline-primary:hover {
+  background-color: #008193;
+  border-color: #008193;
+}
+
 #disclaimer {
   font-style: italic;
 }
@@ -77,7 +87,7 @@ JUMBOTRON
 
 .jumbotron {
   color: white;
-  background: url('../images/hero-image.jpg') fixed center no-repeat;
+  background: url('../images/hero-image.jpg') center no-repeat;
   -moz-background-size: cover;
        background-size: cover;
   -moz-border-radius: 0;
@@ -109,6 +119,11 @@ SIGN UP PAGE
 .form-control {
   width: 400px;
 }
+
+/*********************************
+PASSWORDS PAGE
+*********************************/
+
 
 /*********************************
 ERROR PAGE
