--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,16 @@ body {
 
 }
 
+.btn-outline-primary {
+  color: var(--colorPrim);
+  border-color: var(--colorPrim);
+}
+
+.btn-outline-primary:hover {
+  background-color: var(--colorPrim);
+  border-color: var(--colorPrim);
+}
+
 #disclaimer {
   font-style: italic;
 }
@@ -71,7 +81,7 @@ JUMBOTRON
 
 .jumbotron {
   color: white;
-  background: url('../images/hero-image.jpg') fixed center no-repeat;
+  background: url('../images/hero-image.jpg') center no-repeat;
   background-size: cover;
   border-radius: 0;
 }
@@ -101,6 +111,11 @@ SIGN UP PAGE
 .form-control {
   width: 400px;
 }
+
+/*********************************
+PASSWORDS PAGE
+*********************************/
+
 
 /*********************************
 ERROR PAGE
