minor style change to copy button

--- a/views/index.pug
+++ b/views/index.pug
@@ -22,4 +22,4 @@ block content
       div.row.col-md-6.offset-md-3.text-center.password-generator
         h5.col-6.text-right#password-title Your password is:
         p.col-6.text-left.password
-      button.btn.btn-secondary.my-4.copy-button Copy Password
+      button.btn.btn-outline-primary.my-4.copy-button Copy Password
