--- a/views/passwords.pug
+++ b/views/passwords.pug
@@ -3,7 +3,22 @@ extends layout
 block content
 
   div.container
-    .row.my-5.mx-auto.passwords-row
+    .row.mt-5.mb-2.mx-auto
+      h4 Password Options
+    .row.mx-auto
+    label(for="specialCharsCheckbox") Use Special Characters? (@#% etc.)
+      input(type="checkbox")#specialCharsCheckbox.ml-3
+    .row.mx-auto
+    label(for="passwordLength") Password Length
+      select.ml-3#passwordLength
+        option 6
+        option 7
+        option 8
+        option 9
+        option 10
+        option 11
+        option 12
+    .row.mt-2.mb-5.mx-auto.passwords-row
       button.btn.btn-primary.my-4.password-btn#myPasswordsButton Click to generate password
       h5.my-auto.px-3.password-title Your password is:
       p.my-auto.px-3.password
