--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,4 +23,6 @@ body
     strong Copyright 2017 |
     a(href="https://github.com/donatron", target="_blank")   Don Macarthur
 
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js")
+
   script(src="../scripts/main.js")
