updated passwords.pug file to loop over saved passwords and display in table format
also moved generated password field to inside the save form to enable saving of password to MongoDB

updated /save route for saving of passwords. Functionality not quite there yet

--- a/views/passwords.pug
+++ b/views/passwords.pug
@@ -20,19 +20,20 @@ block content
         option 12
     .row.mt-2.mb-5.mx-auto.passwords-row
       button.btn.btn-primary.my-4.password-btn#myPasswordsButton Click to generate password
-      h5.my-auto.px-3.password-title Your password is:
-      p.my-auto.px-3.password
 
     .row
       .col-md-6.offset-md-3.save-form
         h3.text-center Save Password To Wallet
         form(method="POST", action="/save")
           div.form-group
+            label(for="generatedPassword") Your Password Is
+            input.form-control.password(type="text" id="generatedPassword" name="generatedPassword")
+          div.form-group
             label(for="description") Site Name
             input.form-control(type="text" id="description" placeholder="site name" name="description")
           div.form-group
-            label(for="description") Website URL
-            input.form-control(type="text" id="description" placeholder="www.siteurl.com" name="url")
+            label(for="siteUrl") Website URL
+            input.form-control(type="text" id="siteUrl" placeholder="www.siteurl.com" name="url")
           button.btn.btn-outline-primary.save-password(type='submit') Save To Wallet
 
     .row
@@ -46,19 +47,8 @@ block content
           th URL
           th Password
       tbody
+      each savedPassword in savedPasswords
         tr
-          td Some Website
-          td.savedPassword www.somewebsite.com
-          td password
-        tr
-          td Another Website
-          td.savedPassword www.anotherwebsite.com
-          td password
-        tr
-          td And Another Website
-          td.savedPassword www.andanotherwebsite.com
-          td password
-        tr
-          td One More Website
-          td.savedPassword www.onemorewebsite.com
-          td password
+          td #{savedPassword.siteName}
+          td #{savedPassword.siteURL}
+          td #{savedPassword.sitePassword}
