fixed /save route to add functionality to save passwords to database
minor styling changes on password.pug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,6 +124,15 @@ SIGN UP PAGE
 PASSWORDS PAGE
 *********************************/
 
+thead {
+  background-color: #008193;
+  color: white;
+}
+
+td {
+  color: #008193;
+}
+
 
 /*********************************
 ERROR PAGE
