--- a/views/passwords.pug
+++ b/views/passwords.pug
@@ -42,13 +42,13 @@ block content
 
     table.table
       thead
-        tr
+        tr.text-center
           th Site Name
           th URL
           th Password
       tbody
       each savedPassword in savedPasswords
-        tr
+        tr.text-center
           td #{savedPassword.siteName}
           td #{savedPassword.siteURL}
           td #{savedPassword.sitePassword}
