--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,13 @@ NAVIGATION
   color: rgb(79,234,255);
 }
 
-.navbar .btn {
+#profile-button {
+  position: absolute;
+  right: 150;
+}
+
+#log-out-button,
+#log-in-button {
   position: absolute;
   right: 50;
 }
@@ -123,6 +129,10 @@ thead {
 
 td {
   color: var(--colorPrim);
+}
+
+.password-row {
+  background-color: red;
 }
 
 
