corrected error in naming of form input fields on profile.pug
added successful authentication of current user id and password

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -17,8 +17,8 @@ block content
         input.form-control(type="text" name="currentPassword" id="currentPassword")
       div.form-group
         label(for="newPassword") New Password:
-        input.form-control(type="text" name="currentPassword" id="currentPassword")
+        input.form-control(type="text" name="newPassword" id="newPassword")
       div.form-group
         label(for="newPasswordConfirm") Confirm New Password:
-        input.form-control(type="text" name="currentPassword" id="currentPassword")
+        input.form-control(type="text" name="newPasswordConfirm" id="newPasswordConfirm")
       button.btn.btn-outline-primary.update(type='submit') Update Profile
