--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,8 +4,8 @@ head
   meta(name='viewport', content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
   meta(http-equiv='X-US-Compatible', content='ie-edge')
   title Password Generator | #{title}
-  link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css", integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy", crossorigin="anonymous")
-  link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
+  link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css")
+  link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
   link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Righteous|Roboto")
   link(rel="stylesheet", href="/stylesheets/style.css")
   script(src=src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
