--- a/views/profile.pug
+++ b/views/profile.pug
@@ -14,11 +14,11 @@ block content
       h3.mt-5 Change Password
       div.form-group
         label(for="currentPassword") Password:
-        input.form-control(type="text" name="currentPassword" id="currentPassword")
+        input.form-control(type="password" name="currentPassword" id="currentPassword")
       div.form-group
         label(for="newPassword") New Password:
-        input.form-control(type="text" name="newPassword" id="newPassword")
+        input.form-control(type="password" name="newPassword" id="newPassword")
       div.form-group
         label(for="newPasswordConfirm") Confirm New Password:
-        input.form-control(type="text" name="newPasswordConfirm" id="newPasswordConfirm")
+        input.form-control(type="password" name="newPasswordConfirm" id="newPasswordConfirm")
       button.btn.btn-outline-primary.update(type='submit') Update Profile
