--- a/views/index.pug
+++ b/views/index.pug
@@ -19,7 +19,7 @@ block content
       h3.col Get Started
       p#disclaimer Passwords generated here cannot be saved to your wallet. To save passwords click above to create an account.
       button.btn.btn-primary.my-4.password-btn#guestPassword Click to generate password
-      div.row.col-md-6.offset-md-3.text-center.password-generator
+      div.row.col-md-6.offset-md-3.text-center.align-center.password-generator
         h5.col-6.text-right#password-title Your password is:
         p.col-6.text-left.password#guestPasswordText
       button.btn.btn-outline-primary.my-4.copy-button(data-clipboard-target="#guestPasswordText") Copy Password
