--- a/views/passwords.pug
+++ b/views/passwords.pug
@@ -36,8 +36,8 @@ block content
             input.form-control(type="text" id="siteUrl" placeholder="www.siteurl.com" name="url")
           button.btn.btn-outline-primary.save-password(type='submit') Save To Wallet
 
-    .row
-      .col-md-6-text-center.offset-3.my-5
+    .row.text-center
+      .col-md-6.offset-3.my-5
         h1 Saved Passwords for #{name}
 
     table.table
@@ -52,4 +52,3 @@ block content
           td #{savedPassword.siteName}
           td #{savedPassword.siteURL}
           td #{savedPassword.sitePassword}
-          
