--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
   --colorPrim: #008193;
+  --colorSec: #ff1300;
 }
 
 /*********************************
@@ -17,12 +18,17 @@ body {
   border: 0;
   min-height: 100%;
   position: relative;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   padding-bottom: 6rem;
 }
 
 .btn {
   border-radius: 0;
+}
+
+button:active,
+button:focus {
+  outline: 0 !important;
 }
 
 .btn-primary {
@@ -32,7 +38,6 @@ body {
 
 .btn-primary:hover {
   background-color: #00c2de;
-
 }
 
 .btn-outline-primary {
@@ -54,11 +59,15 @@ NAVIGATION
 *********************************/
 
 .navbar {
-  background: linear-gradient(to right, rgba(79,234,255,1) 0%, rgba(0,0,0,1) 100%);
+  background: linear-gradient(
+    to right,
+    rgba(79, 234, 255, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
 }
 
 .navbar-brand {
-  font-family: 'Righteous', cursive;
+  font-family: "Righteous", cursive;
 }
 
 .fa-lock {
@@ -67,7 +76,7 @@ NAVIGATION
 }
 
 .fa-bars {
-  color: rgb(79,234,255);
+  color: rgb(79, 234, 255);
 }
 
 #profile-button {
@@ -87,7 +96,7 @@ JUMBOTRON
 
 .jumbotron {
   color: white;
-  background: url('../images/hero-image.jpg') center no-repeat;
+  background: url("../images/hero-image.jpg") center no-repeat;
   background-size: cover;
   border-radius: 0;
 }
@@ -122,6 +131,10 @@ SIGN UP PAGE
 PASSWORDS PAGE
 *********************************/
 
+#password-title {
+  line-height: 1 !important;
+}
+
 thead {
   background-color: var(--colorPrim);
   color: white;
@@ -135,7 +148,6 @@ td {
   background-color: red;
 }
 
-
 /*********************************
 ERROR PAGE
 *********************************/
@@ -143,11 +155,20 @@ ERROR PAGE
 .fa-exclamation {
   font-size: 5rem;
   color: white;
-  background-color: var(--colorPrim);
+  background-color: var(--colorSec);
   height: 100px;
   width: 100px;
   border-radius: 50%;
-  padding-top: .8rem;
+  padding-top: 0.8rem;
+}
+
+.fa-chevron-left {
+  color: var(--colorPrim);
+}
+
+.errors a {
+  color: var(--colorPrim);
+  text-decoration: none;
 }
 
 /*********************************
@@ -156,7 +177,11 @@ FOOTER
 
 footer {
   width: 100%;
-  background: linear-gradient(to right, rgba(79,234,255,1) 0%, rgba(0,0,0,1) 100%);
+  background: linear-gradient(
+    to right,
+    rgba(79, 234, 255, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
   padding: 20px 0;
   color: white;
 
