--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 /*********************************
@@ -14,7 +14,7 @@ NAVIGATION
 *********************************/
 
 .navbar-brand {
-  font-family: 'Righteous', cursive;
+  font-family: "Righteous", cursive;
 }
 
 .fa-lock {
@@ -29,11 +29,11 @@ JUMBOTRON
 .jumbotron {
   height: 600px;
   color: white;
-  background: url('img/hero-image.jpg');
+  background: url("img/hero-image.jpg");
   -moz-background-size: cover;
-       background-size: cover;
+  background-size: cover;
   -moz-border-radius: 0;
-       border-radius: 0;
+  border-radius: 0;
 }
 
 /*********************************
