--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
 
   // Jumbotron
-  div.jumbotron.text-center
+  div.jumbotron.text-center.content
     h1.display-4 Password Generator
     p.lead Easily create and store secure passwords.
     br
