--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ button:focus {
 .btn-primary {
   background-color: var(--colorPrim);
   border: none;
+  transition: all 0.3s ease-in;
 }
 
 .btn-primary:hover {
@@ -43,6 +44,7 @@ button:focus {
 .btn-outline-primary {
   color: var(--colorPrim);
   border-color: var(--colorPrim);
+  transition: all 0.3s ease-in;
 }
 
 .btn-outline-primary:hover {
@@ -52,6 +54,10 @@ button:focus {
 
 #disclaimer {
   font-style: italic;
+}
+
+.content {
+  margin-top: 90px;
 }
 
 /*********************************
@@ -64,10 +70,23 @@ NAVIGATION
     rgba(79, 234, 255, 1) 0%,
     rgba(0, 0, 0, 1) 100%
   );
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .navbar-brand {
   font-family: "Righteous", cursive;
+}
+
+.navbar-light .navbar-collapse .navbar-nav .nav-item a:hover {
+  transition: all 0.3s ease-in;
+}
+
+.nav-item a:hover {
+  opacity: 1;
 }
 
 .fa-lock {
@@ -99,6 +118,8 @@ JUMBOTRON
   background: url("../images/hero-image.jpg") center no-repeat;
   background-size: cover;
   border-radius: 0;
+  top: 32px;
+  margin-top: 56px;
 }
 
 /*********************************
@@ -197,4 +218,27 @@ footer a:hover {
   color: darkgrey;
   opacity: 0.8;
   text-decoration: none;
+}
+
+/*********************************
+MEDIA QUERIES
+*********************************/
+
+@media screen and (max-width: 991px) {
+  .navbar-nav {
+    height: 100%;
+    width: 100%;
+  }
+
+  #log-in-button {
+    position: relative;
+    margin-left: 47.5;
+    transition: all 0.3s ease-in;
+  }
+
+  #log-in-button:hover {
+    background-color: #fff;
+    color: var(--colorPrim);
+    opacity: 0.75;
+  }
 }
