--- a/views/about.pug
+++ b/views/about.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-  div.container.text-center
+  div.container.text-center.content
     .row
       .col.mx-auto.my-5
        h1.display-4 Easily Generate and Store Secure Passwords
