--- a/views/error.pug
+++ b/views/error.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  .main.container
+  .main.container.content
     .row.text-center.mt-5
       .col.p-t-2.errors
         i.fa.fa-exclamation.mt-3
