--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,4 +25,4 @@ body
 
   script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js")
 
-  script(src="../scripts/main.js")
+  script(src="../scripts/main-min.js")
