--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-  div.container.text-center
+  div.container.text-center.content
     div.row.col-md-6.offset-3.mt-5
       h1 Log In
     div.row.col-md-6.offset-3.mt-3.text-left
