--- a/views/passwords.pug
+++ b/views/passwords.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-  div.container
+  div.container.content
     .row.mt-5.mb-2.mx-auto
       h4 Password Options
     .row.mx-auto
