added js functionality to automatically change date in Copyright in footer

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -296,6 +296,10 @@ footer {
 
 footer a {
   color: white;
+  -webkit-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
 }
 
 footer a:hover {
