--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,8 +19,9 @@ body
   block content
 
   // footer
-  footer.text-center
-    strong Copyright 2018 |
+  footer.text-center.footer
+    strong 
+    span
     a(href="https://github.com/donatron", target="_blank")   Don Macarthur
 
   script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js")
