--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,315 @@
-.App {
-  text-align: center;
+/*********************************
+BASE STYLES
+*********************************/
+
+html {
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+body {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  min-height: 100%;
+  position: relative;
+  font-family: "Roboto", sans-serif;
+  padding-bottom: 6rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.btn {
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+
+button:active,
+button:focus {
+  outline: 0 !important;
+}
+
+.btn-primary {
+  background-color: #008193;
+  border: none;
+  -webkit-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+.btn-primary:hover {
+  background-color: #00c2de;
+}
+
+.btn-outline-primary {
+  color: #008193;
+  border-color: #008193;
+  -webkit-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+.btn-outline-primary:hover {
+  background-color: #008193;
+  border-color: #008193;
+}
+
+#disclaimer {
+  font-style: italic;
+}
+
+.content {
+  margin-top: 90px;
+}
+
+/*********************************
+NAVIGATION
+*********************************/
+
+.navbar {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#4feaff),
+    to(#000000)
+  );
+  background: -moz-linear-gradient(left, #4feaff 0%, #000000 100%);
+  background: -o-linear-gradient(left, #4feaff 0%, #000000 100%);
+  background: linear-gradient(to right, #4feaff 0%, #000000 100%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(79, 234, 255, 1)),
+    to(rgba(0, 0, 0, 1))
+  );
+  background: -moz-linear-gradient(
+    left,
+    rgba(79, 234, 255, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  background: -o-linear-gradient(
+    left,
+    rgba(79, 234, 255, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  background: linear-gradient(
+    to right,
+    rgba(79, 234, 255, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.navbar-brand {
+  font-family: "Righteous", cursive;
+}
+
+.navbar-light .navbar-collapse .navbar-nav .nav-item a:hover {
+  -webkit-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+.nav-item a:hover {
+  opacity: 1;
+}
+
+.fa-lock {
+  font-size: 1.25rem;
+  margin: 0 20px;
+}
+
+.fa-bars {
+  color: rgb(79, 234, 255);
+}
+
+#profile-button {
+  position: absolute;
+  right: 150;
+}
+
+#log-out-button,
+#log-in-button {
+  position: absolute;
+  right: 50;
+}
+
+/*********************************
+JUMBOTRON
+*********************************/
+
+.jumbotron {
+  color: white;
+  background: url("./img/hero-image.jpg") center no-repeat;
+  -moz-background-size: cover;
+  background-size: cover;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  top: 32px;
+  margin-top: 56px;
+}
+
+/*********************************
+ABOUT PAGE
+*********************************/
+
+.benefits li {
+  list-style: none;
+}
+
+.fa-check {
+  color: #008193;
+  font-size: 1rem;
+}
+
+.benefits li p {
+  display: inline-block;
+  padding-left: 10px;
+}
+
+/*********************************
+SIGN UP PAGE
+*********************************/
+
+.form-control {
+  width: 400px;
+}
+
+/*********************************
+PASSWORDS PAGE
+*********************************/
+
+#password-title {
+  line-height: 1 !important;
+}
+
+thead {
+  background-color: #008193;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+td {
+  color: #008193;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.password-row {
+  background-color: red;
+}
+
+/*********************************
+ERROR PAGE
+*********************************/
+
+.fa-exclamation {
+  font-size: 5rem;
+  color: white;
+  background-color: #ff1300;
+  height: 100px;
+  width: 100px;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  padding-top: 0.8rem;
+}
+
+.fa-chevron-left {
+  color: #008193;
+}
+
+.errors a {
+  color: #008193;
+  text-decoration: none;
+}
+
+/*********************************
+FOOTER
+*********************************/
+
+footer {
+  width: 100%;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#4feaff),
+    to(#000000)
+  );
+  background: -moz-linear-gradient(left, #4feaff 0%, #000000 100%);
+  background: -o-linear-gradient(left, #4feaff 0%, #000000 100%);
+  background: linear-gradient(to right, #4feaff 0%, #000000 100%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(79, 234, 255, 1)),
+    to(rgba(0, 0, 0, 1))
+  );
+  background: -moz-linear-gradient(
+    left,
+    rgba(79, 234, 255, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  background: -o-linear-gradient(
+    left,
+    rgba(79, 234, 255, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  background: linear-gradient(
+    to right,
+    rgba(79, 234, 255, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  padding: 20px 0;
+  color: white;
+
+  position: absolute;
+  bottom: 0;
+}
+
+footer a {
+  color: white;
+  -webkit-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+footer a:hover {
+  color: darkgrey;
+  opacity: 0.8;
+  text-decoration: none;
+}
+
+/*********************************
+MEDIA QUERIES
+*********************************/
+
+@media screen and (max-width: 991px) {
+  .navbar-nav {
+    height: 100%;
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+
+  #log-in-button {
+    position: relative;
+    margin-left: 47.5;
+    -webkit-transition: all 0.3s ease-in;
+    -o-transition: all 0.3s ease-in;
+    -moz-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
+  }
+
+  #log-in-button:hover {
+    background-color: #fff;
+    color: #008193;
+    opacity: 0.75;
   }
 }
